--- a/index.html
+++ b/index.html
@@ -107,9 +107,16 @@
     </main>
     <footer>
       <h2>Contattaci</h2>
-      <a href="tel:+3911223456" class="afoot">(+39) 11223456</a>
-      <a href="mailto:info@epicode.school" class="afoot">info@epicode.school</a>
-      <p class="pfoot">Via Appia 1 - 00100 Roma (RM)</p>
+      <a href="tel:+3911223456" class="afoot"
+        ><i class="fas fa-phone-square-alt"></i> (+39) 11223456</a
+      >
+      <a href="mailto:info@epicode.school" class="afoot"
+        ><i class="fas fa-envelope-square"></i> info@epicode.school</a
+      >
+      <p class="pfoot">
+        <i class="fas fa-external-link-square-alt"></i> Via Appia 1 - 00100 Roma
+        (RM)
+      </p>
       <p class="pfoot">________________</p>
       <p class="pfoot">
         &copy; 2021. Immagini di
