--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
         <cite>CEO, Epicode</cite>
       </div>
       <div>
-        <article class="articolo">
+        <article>
           <img class="triple" src="./assets/images/foto1.jpg" alt="laptop" />
           <h3 class="heading">Il tuo PC</h3>
           <p class="text">
             Se vuoi diventare developer è l’unico strumento di cui hai bisogno.
           </p>
         </article>
-        <article class="articolo">
+        <article>
           <img
             class="triple"
             src="./assets/images/foto2.jpg"
@@ -96,7 +96,7 @@
             come loro.
           </p>
         </article>
-        <article class="articolo">
+        <article>
           <img class="triple" src="./assets/images/foto3.jpg" alt="meeting" />
           <h3 class="heading">Lavora subito</h3>
           <p class="text">
