--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fontawesome.com/v5/search?o=r&m=free&c=arrows"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="https://fontawesome.com/v5/search?o=r&m=free&c=arrows" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,10 +15,7 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
     <title>Corso Web Developer - Epicode school</title>
   </head>
   <body>
@@ -34,18 +25,12 @@
     <main>
       <div class="section">
         <h1>Corso Web Developer</h1>
-        <p class="text">
-          Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono
-          arricchire il CV, tu pensa ad arricchire le tue competenze.
-        </p>
+        <p class="text">Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
         <button type="button">PARTIAMO!</button>
       </div>
       <section class="sub">
         <h3 class="heading">Tutti ti cercheranno</h3>
-        <p class="text">
-          Sono 30.000 in Italia le posizioni di developer scoperte, scegli
-          quella che ti stimola di più
-        </p>
+        <p class="text">Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più</p>
       </section>
       <section class="sub">
         <h3 class="heading">Lavora dove vuoi</h3>
@@ -54,24 +39,16 @@
       <img id="pic" src="./assets/images/notebook.jpg" alt="picture" />
       <section class="sub">
         <h3 class="heading">Scegli il tuo ruolo</h3>
-        <p class="text">
-          Potrai scegliere se essere Azienda, Freelance o Startup.
-        </p>
+        <p class="text">Potrai scegliere se essere Azienda, Freelance o Startup.</p>
       </section>
       <section class="sub">
         <h3 class="heading">Lavoro in libertà</h3>
-        <p class="text">
-          Non serve lavorare in ufficio per essere creatori di prodotti
-          digitali.
-        </p>
+        <p class="text">Non serve lavorare in ufficio per essere creatori di prodotti digitali.</p>
       </section>
       <div class="red">
         <h2>Epicode garantisce</h2>
         <p>
-          <em
-            >"3mesi intensivi di corso che cambieranno radicalmente la tua
-            vita"</em
-          >
+          <em>"3mesi intensivi di corso che cambieranno radicalmente la tua vita"</em>
         </p>
         <h4>Mario Rossi</h4>
         <cite>CEO, Epicode</cite>
@@ -80,43 +57,25 @@
         <article>
           <img class="triple" src="./assets/images/foto1.jpg" alt="laptop" />
           <h3 class="heading">Il tuo PC</h3>
-          <p class="text">
-            Se vuoi diventare developer è l’unico strumento di cui hai bisogno.
-          </p>
+          <p class="text">Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
         </article>
         <article>
-          <img
-            class="triple"
-            src="./assets/images/foto2.jpg"
-            alt="laptop semichiuso"
-          />
+          <img class="triple" src="./assets/images/foto2.jpg" alt="laptop semichiuso" />
           <h3 class="heading">Impara ora</h3>
-          <p class="text">
-            Impara da chi diventerai tra qualche anno, e diventa una rockstar
-            come loro.
-          </p>
+          <p class="text">Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
         </article>
         <article>
           <img class="triple" src="./assets/images/foto3.jpg" alt="meeting" />
           <h3 class="heading">Lavora subito</h3>
-          <p class="text">
-            Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.
-          </p>
+          <p class="text">Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
         </article>
       </div>
     </main>
     <footer>
       <h2>Contattaci</h2>
-      <a href="tel:+3911223456" class="afoot"
-        ><i class="fas fa-phone-square-alt"></i> (+39) 11223456</a
-      >
-      <a href="mailto:info@epicode.school" class="afoot"
-        ><i class="fas fa-envelope-square"></i> info@epicode.school</a
-      >
-      <p class="pfoot">
-        <i class="fas fa-external-link-square-alt"></i> Via Appia 1 - 00100 Roma
-        (RM)
-      </p>
+      <a href="tel:+3911223456" class="afoot"><i class="fas fa-phone-square-alt"></i> (+39) 11223456</a>
+      <a href="mailto:info@epicode.school" class="afoot"><i class="fas fa-envelope-square"></i> info@epicode.school</a>
+      <p class="pfoot"><i class="fas fa-external-link-square-alt"></i> Via Appia 1 - 00100 Roma (RM)</p>
       <p class="pfoot">________________</p>
       <p class="pfoot">
         &copy; 2021. Immagini di
